Resolve formatting issues

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -12,16 +12,16 @@
     <li class="dropdown" id="main1"><a href="../HTML/directory.html" class="trigger-drop">Projects</a>
       <ul class="drop">
         <li><a href="https://github.com/ryancoen">Github</a></li>
-        <li><a href="./HTML/directory.html">All</a></li>
+        <li><a href="../HTML/directory.html">All</a></li>
       </ul>
     </li>
-    <li id="main2"><a href="./HTML/music.html">Music</a></li>
-    <li id="main3"><a href="./HTML/about.html">About</a></li>
-	  <li class="dropdown" id="main4"><a href="./HTML/directory.html" class="trigger-drop">Menu</a>
+    <li id="main2"><a href="../HTML/music.html">Music</a></li>
+    <li id="main3"><a href="../HTML/about.html">About</a></li>
+	  <li class="dropdown" id="main4"><a href="../HTML/directory.html" class="trigger-drop">Menu</a>
       <ul class="drop">
         <li><a href="#">Github</a></li>
-		  <li><a href="./HTML/music.html">Music</a></li>
-		  <li><a href="./HTML/about.html">About</a></li>
+		  <li><a href="../HTML/music.html">Music</a></li>
+		  <li><a href="../HTML/about.html">About</a></li>
         <li><a href="../HTML/directory.html">Projects</a></li>
       </ul>
     </li>
@@ -33,13 +33,13 @@
   <div id="topprof"> <img src="../Images/IMG_4589.jpeg" id="profilepic">
     <div id="para">
       <h1>Ryan Coen</h1>
-      <h4>Web Designer | Musician | Apple Fan-boy</h4>
-      <p>Hey there! My name is Ryan Coen, a front-end web developer based out of Milwaukee, WI. Technology, music, and design are my passions and I usually spend my time learning something new or trying to create something truly unique and useful. 
-        I have years of expereince in client facing leadership and technical support.<br>
+      <h4>Web Designer | Musician | Apple Enthusiast</h4>
+      <p>Hey there! My name is Ryan Coen, a front-end web developer based out of Milwaukee, WI. Technology, music, and design are my passions. Learning new things and implementing them in my creative projects is what I love to do. I have years of expereince in client facing leadership and technical support and I'm not afraid to get my hands dirty to solve complex problems.<br>
         Take a look at my portfolio, maybe learn a thing or two, or just say "Hi!". Mac and I would love to hear from you. </p>
     </div>
   </div>
-  <a href="https://www.icloud.com/iclouddrive/0rUN1_7jEtkfRyJj_Wk5xOWpQ#RyanCoenResume" class="button">Download Resume</a><br>
+  <a href="https://www.icloud.com/iclouddrive/0rUN1_7jEtkfRyJj_Wk5xOWpQ#RyanCoenResume" class="button">Download Resume</a>
+	<br>
 </div>
 <div id="container2">
   <div id="barz">
