--- a/HTML/directory.html
+++ b/HTML/directory.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled Document</title>
+<title>Projects | ryancoen.dev</title>
 <link rel="stylesheet" type="text/css" href="../CSS/directory.css">
 <link rel="stylesheet" type="text/css" href="../CSS/unv.css">
 <link rel="stylesheet" href="https://use.typekit.net/ynh7syw.css">
@@ -31,15 +31,14 @@
 <body>
 <div id="list">
   <h1 align="center">Recent Posts</h1>
-  <div id="divider"></div>
   <h3>2020</h3>
   <ul class="projects">
-	  <li><a class="link2" href="../HTML/macOS_calculator.html">JavaScript Calculator - macOS </a></li>
-    <li><a class="link2" href="../HTML/raspberrytimemachine.html">Raspberry Pi Time Machine [Guide]</a></li>
-    <li><a class="link2" href="../HTML/All-In-One-Mac-Recovery.html">All-in-one macOS/OS X Recovery Drive [Guide]</a></li>
-    <li><a class="link2" href="">Mac Pro 2008 A1222 El Capitan Upgrade [Guide]</a></li>
-    <li><a class="link2" href="../HTML/Intel.html">Intel NUC DC3217BY Hackintosh with Catalina [Guide]</a></li>
-    <li><a class="link2" href=""></a>Wii U Homebrew</li>
+	  <li><a class="link2" href="../HTML/macOS_calculator.html">[Code] JavaScript Calculator - macOS </a></li>
+    <li><a class="link2" href="../HTML/raspberrytimemachine.html">[Guide] Raspberry Pi Time Machine </a></li>
+    <li><a class="link2" href="../HTML/All-In-One-Mac-Recovery.html">[Guide] All-in-one macOS/OS X Recovery Drive </a></li>
+    <li><a class="link2" href="">[Guide] Mac Pro 2008 A1222 El Capitan Upgrade </a></li>
+    <li><a class="link2" href="../HTML/Intel.html">[Guide] Intel NUC DC3217BY Hackintosh with Catalina</a></li>
+    <li><a class="link2" href=""></a>[Blog] Wii U Homebrew</li>
   </ul>
   <h3>2019</h3>
   <ul class="projects">
