--- a/HTML/raspberrytimemachine.html
+++ b/HTML/raspberrytimemachine.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled Document</title>
+<title>Raspberry Pi Time Machine | ryancoen.dev</title>
 <link rel="stylesheet" type="text/css" href="../CSS/raspberrytimemachine.css">
 <link rel="stylesheet" type="text/css" href="../CSS/unv.css">
 <link rel="stylesheet" href="https://use.typekit.net/ynh7syw.css">
@@ -12,16 +12,16 @@
     <li class="dropdown" id="main1"><a href="../HTML/directory.html" class="trigger-drop">Projects</a>
       <ul class="drop">
         <li><a href="https://github.com/ryancoen">Github</a></li>
-        <li><a href="./HTML/directory.html">All</a></li>
+        <li><a href="../HTML/directory.html">All</a></li>
       </ul>
     </li>
-    <li id="main2"><a href="./HTML/music.html">Music</a></li>
-    <li id="main3"><a href="./HTML/about.html">About</a></li>
-    <li class="dropdown" id="main4"><a href="./HTML/directory.html" class="trigger-drop">Menu</a>
+    <li id="main2"><a href="../HTML/music.html">Music</a></li>
+    <li id="main3"><a href="../HTML/about.html">About</a></li>
+    <li class="dropdown" id="main4"><a href="../HTML/directory.html" class="trigger-drop">Menu</a>
       <ul class="drop">
-        <li><a href="#">Github</a></li>
-        <li><a href="./HTML/music.html">Music</a></li>
-        <li><a href="./HTML/about.html">About</a></li>
+        <li><a href="https://github.com/ryancoen">Github</a></li>
+        <li><a href="../HTML/music.html">Music</a></li>
+        <li><a href="../HTML/about.html">About</a></li>
         <li><a href="../HTML/directory.html">Projects</a></li>
       </ul>
     </li>
@@ -59,6 +59,7 @@
   <h3>Install/Configure Open Media Vault</h3>
 	<p>Now to install Open Media Vault (OMV). Issue the following command:</p>
 	<div class="code">wget -O - https://raw.githubusercontent.com/OpenMediaVault-Plugin-Developers/installScript/master/install | sudo bash</div>
+	<p>From here, you can configure OMV to fit your preferences. For me, I set up a RAID configuration with the two 1TB drives I had, and kept the other two as individual. Check the guide in resources from DannyDa. Now you an SSH into the NAS through terminal or connect the drive through the Time Machine application. </p>
   <h3>Credits and resources</h3>
   <p>There were a ton of methods I tried to get this up and running successfully. You may want to configure yours a bit differently and not use OMV. Below are some awesome resources I used to learn from:</p>
   <ul>
