--- a/HTML/macOS_calculator.html
+++ b/HTML/macOS_calculator.html
@@ -65,7 +65,7 @@
 <br>
 <a href="" class="button">View Code</a>
 	<div id="description">
-<p>This is a fully functional calculator styled in the design of macOS Big Sur. The code is forked from <b>WebDevSimplified</b> and his code is linked on my Github. I have added the modulo and +/- feature in addtion to styling. Planned features include:
+<p>This is a fully functional calculator styled in the design of macOS Big Sur. The code is forked from <b>WebDevSimplified</b> and his code is linked on my Github. I have added the modulo and +/- feature in addition to styling. Planned features include:
 <ul>
   <li>Add functionality to macOS menu buttons</li>
   <li>Model and expand to advanced calculator (Green macOS button)</li>
