Footer link fix

--- a/HTML/khswitch.html
+++ b/HTML/khswitch.html
@@ -9,14 +9,21 @@
 </head>
 <nav id="navigation"><a href="../index.html" class="logo">RYANCOEN.DEV</a>
   <ul class="links">
-    <li class="dropdown"><a href="../HTML/directory.html" class="trigger-drop">Projects</a>
+    <li class="dropdown" id="main1"><a href="../HTML/directory.html" class="trigger-drop">Projects</a>
       <ul class="drop">
-        <li><a href="#">Github</a></li>
-        <li><a href="../HTML/directory.html">All</a></li>
+        <li><a href="https://github.com/ryancoen">Github</a></li>
+        <li><a href="./HTML/directory.html">All</a></li>
       </ul>
     </li>
-    <li class="dropdown"><a href="../HTML/music.html" class="trigger-drop">Music</a>
-    <li><a href="../HTML/about.html">About</a></li>
+    <li id="main2"><a href="./HTML/music.html">Music</a></li>
+    <li id="main3"><a href="./HTML/about.html">About</a></li>
+	  <li class="dropdown" id="main4"><a href="./HTML/directory.html" class="trigger-drop">Menu</a>
+      <ul class="drop">
+        <li><a href="#">Github</a></li>
+		  <li><a href="./HTML/music.html">Music</a></li>
+		  <li><a href="./HTML/about.html">About</a></li>
+        <li><a href="../HTML/directory.html">Projects</a></li>
+      </ul>
     </li>
   </ul>
 </nav>
@@ -29,10 +36,17 @@
 		<h3>"May your heart be your guiding key."</h3>
 		<p>This is my promotional concept for Kingdom Hearts on the Nintendo Switch. I would give anything for this to be real.<br><br> Anyone who knows me will tell you that my favorite game (series) of all time is Kingdom Hearts. Most people will say Mario 64, or Halo, or some other classic video game but for me, the Kingdom Hearts series has always stuck out as one of the most wonderful, challenging, and mindbending video game series of all time. It's time for Square to bring the series to the Nintendo Switch, at home or on the go. <br><br>Square Enix released Kingdom Hearts HD 1.5+2.5 ReMIX on March 28, 2017 for the PS4. Originally, the two packages were released for the PS3, separately. Since then, Square has been consistently adding on to this package, first by adding on Kingdom Hearts 2.8, and then by combining every game in the series (with exception to KH3 or the mobile games) into Kingdom Hearts: The Story So Far. My mockup above does not show The Story So Far only because I do not believe the Nintendo Switch is technically powerful enough to run the 0.2 part of the package, at least not without some heavy compromises.</p> </div>
 		<img src="../Images/key.png" id="key">
+		<div id="tech" align="center">
+		<h3>Technologies employed:</h3>
+			<img src="../Images/788px-Adobe_Photoshop_CC_icon.png" width="60" height="60" >
+		</div>
 	</div>
 	<div id="footer">
-  <div id="social" align="center"> <img src="../Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> <img src="../Images/linkedin.png" class="socialfooter" width="60" height="60" alt=""/> <img src="../Images/github.png" class="socialfooter" width="60" height="60" alt=""/> </div>
-  <h5 align="center">Ryan Coen - 2020</h5>
+  <div id="social" align="center"> 
+	  <a href="https://www.youtube.com/user/SynGatesFan200/playlists"><img src="../Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> </a>
+	  <a href="https://www.linkedin.com/in/ryan-coen/"><img src="../Images/linkedin.png" class="socialfooter" width="60" height="60" alt=""/> </a>
+	  <a href="https://github.com/ryancoen"><img src="../Images/github.png" class="socialfooter" width="60" height="60" alt=""/> </a> </div>
+  <h4 align="center">Ryan Coen - 2020</h4>
 </div>
 </body>
 </html>
