--- a/HTML/raspberrytimemachine.html
+++ b/HTML/raspberrytimemachine.html
@@ -69,8 +69,11 @@
   </ul>
 </div>
 <div id="footer">
-  <div id="social" align="center"> <img src="../Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> <img src="../Images/linkedin.png" class="socialfooter" width="60" height="60" alt=""/> <img src="../Images/github.png" class="socialfooter" width="60" height="60" alt=""/> </div>
-  <h5 align="center">Ryan Coen - 2020</h5>
+  <div id="social" align="center"> 
+	  <a href="https://www.youtube.com/user/SynGatesFan200/playlists"><img src="../Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> </a>
+	  <a href="https://www.linkedin.com/in/ryan-coen/"><img src="../Images/linkedin.png" class="socialfooter" width="60" height="60" alt=""/> </a>
+	  <a href="https://github.com/ryancoen"><img src="../Images/github.png" class="socialfooter" width="60" height="60" alt=""/> </a> </div>
+  <h4 align="center">Ryan Coen - 2020</h4>
 </div>
 </body>
 </html>
