--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@
         <li><a href="../HTML/directory.html">Projects</a></li>
       </ul>
     </li>
-    <!--<li>
-      <input type="checkbox" name="dark_light" onclick="toggleDarkLight()" title="Toggle dark/light mode" class="toggle" checked>
-    </li>-->
   </ul>
 </nav>
 <a href="../index.html"><img src="./Images/logo.png"  width="135" height="135" id="logopic" alt=""/></a>
@@ -42,8 +39,11 @@
   RyanCoen.dev</h1>
 <p class="light-mode" id="intro" align="center">A place for my projects, music, tutorials and all things that interest me. Everything you find here has been built from scratch, including this site. Check out my portfolio for the latest projects I'm working on.&nbsp; &nbsp; &nbsp; </p>
 <div id="footer">
-  <div id="social" align="center"> <img src="./Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> <img src="./Images/linkedin.png" class="socialfooter" width="60" height="60" alt=""/> <img src="./Images/github.png" class="socialfooter" width="60" height="60" alt=""/> </div>
-  <h5 align="center">Ryan Coen - 2020</h5>
+  <div id="social" align="center"> 
+	  <a href="https://www.youtube.com/user/SynGatesFan200/playlists"><img src="./Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> </a>
+	  <a href="https://www.linkedin.com/in/ryan-coen/"><img src="./Images/linkedin.png" class="socialfooter" width="60" height="60" alt=""/> </a>
+	  <a href="https://github.com/ryancoen"><img src="./Images/github.png" class="socialfooter" width="60" height="60" alt=""/> </a> </div>
+  <h4 align="center">Ryan Coen - 2020</h4>
 </div>
 </body>
 </html>
