--- a/HTML/about.html
+++ b/HTML/about.html
@@ -29,12 +29,12 @@
 </nav>
 <a href="../index.html"><img src="../Images/logo.png"  width="135" height="135" id="logopic" alt=""/></a>
 <body>
-<div id="container">
+<div class="container">
   <div id="topprof"> <img src="../Images/IMG_4589.jpeg" id="profilepic">
     <div id="para">
       <h1>Ryan Coen</h1>
       <h4>Web Designer | Musician | Apple Enthusiast</h4>
-      <p>Hey there! My name is Ryan Coen, a front-end web developer based out of Milwaukee, WI. Technology, music, and design are my passions. Learning new things and implementing them in my creative projects is what I love to do. I have years of expereince in client facing leadership and technical support and I'm not afraid to get my hands dirty to solve complex problems.<br>
+      <p>Hey there! My name is Ryan Coen, a front-end web developer based out of Milwaukee, WI. Technology, music, and design are my passions. Learning new things and implementing them in my creative projects is what I love to do. I have years of expereince in client facing leadership and technical support and I'm not afraid to get my hands dirty to solve complex problems.<br><br>
         Take a look at my portfolio, maybe learn a thing or two, or just say "Hi!". Mac and I would love to hear from you. </p>
     </div>
   </div>
@@ -72,8 +72,11 @@
   </div>
 </div>
 <div id="footer">
-  <div id="social" align="center"> <img src="../Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> <img src="../Images/linkedin.png" class="socialfooter" width="60" height="60" alt=""/> <img src="../Images/github.png" class="socialfooter" width="60" height="60" alt=""/> </div>
-  <h5 align="center">Ryan Coen - 2020</h5>
+  <div id="social" align="center"> 
+	  <a href="https://www.youtube.com/user/SynGatesFan200/playlists"><img src="../Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> </a>
+	  <a href="https://www.linkedin.com/in/ryan-coen/"><img src="../Images/linkedin.png" class="socialfooter" width="60" height="60" alt=""/> </a>
+	  <a href="https://github.com/ryancoen"><img src="../Images/github.png" class="socialfooter" width="60" height="60" alt=""/> </a> </div>
+  <h4 align="center">Ryan Coen - 2020</h4>
 </div>
 </body>
 </html>
