--- a/HTML/tyodswitch.html
+++ b/HTML/tyodswitch.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Projects | ryancoen.dev</title>
-<link rel="stylesheet" type="text/css" href="../CSS/directory.css">
+<title>Paper Mario: The Thousand-Year Door for Nintendo Switch | ryancoen.dev</title>
+<link rel="stylesheet" type="text/css" href="../CSS/imagedisplay.css">
 <link rel="stylesheet" type="text/css" href="../CSS/unv.css">
 <link rel="stylesheet" href="https://use.typekit.net/ynh7syw.css">
 </head>
@@ -29,24 +29,19 @@
 </nav>
 <a href="../index.html"><img src="../Images/logo.png"  width="135" height="135" id="logopic" alt=""/></a>
 <body>
-<div id="list">
-  <h1 align="center">Recent Posts</h1>
-  <h3>2020</h3>
-  <ul class="projects">
-	  <li><a class="link2" href="../HTML/macOS_calculator.html">[Code] JavaScript Calculator - macOS </a></li>
-    <li><a class="link2" href="../HTML/raspberrytimemachine.html">[Guide] Raspberry Pi Time Machine </a></li>
-    <li><a class="link2" href="../HTML/All-In-One-Mac-Recovery.html">[Guide] All-in-one macOS/OS X Recovery Drive </a></li>
-    <li><a class="link2" href="">[Guide] Mac Pro 2008 A1222 El Capitan Upgrade </a></li>
-    <li><a class="link2" href="../HTML/Intel.html">[Guide] Intel NUC DC3217BY Hackintosh with Catalina</a></li>
-    <li><a class="link2" href=""></a>[Blog] Wii U Homebrew</li>
-  </ul>
-  <h3>2019</h3>
-  <ul class="projects">
-    <li><a class="link2" href="../HTML/khswitch.html">[Concept] Kingdom Hearts 1.5+2.5 on Nintendo Switch</a></li>
-    <li><a class="link2" href="../HTML/tyodswitch.html">[Concept] Paper Mario: The Thousand Year Door on Nintendo Switch</a></li>
-  </ul>
-</div>
-<div id="footer">
+	<div id="container">
+	<img src="../Images/Paper Mario.jpg" id="topimage">
+		<div id="para">
+		<h1>Paper Mario: The Thousand-Year Door for Nintendo Switch [Concept]</h1>
+		<h3></h3>
+		<p></p> 
+		</div>
+		<div id="tech" align="center">
+		<h3>Technologies employed:</h3>
+			<img src="../Images/788px-Adobe_Photoshop_CC_icon.png" width="60" height="60" >
+		</div>
+	</div>
+	<div id="footer">
   <div id="social" align="center"> 
 	  <a href="https://www.youtube.com/user/SynGatesFan200/playlists"><img src="../Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> </a>
 	  <a href="https://www.linkedin.com/in/ryan-coen/"><img src="../Images/linkedin.png" class="socialfooter" width="60" height="60" alt=""/> </a>
