Adjusted Body sizing and added LinkedIn button on About page

--- a/HTML/StylizedResume.html
+++ b/HTML/StylizedResume.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled Document</title>
-<link rel="stylesheet" type="text/css" href="../CSS/intel.css">
+<title>Paper Mario: The Thousand-Year Door for Nintendo Switch | ryancoen.dev</title>
+<link rel="stylesheet" type="text/css" href="../CSS/imagedisplay.css">
 <link rel="stylesheet" type="text/css" href="../CSS/unv.css">
 <link rel="stylesheet" href="https://use.typekit.net/ynh7syw.css">
 </head>
@@ -29,13 +29,17 @@
 </nav>
 <a href="../index.html"><img src="../Images/logo.png"  width="135" height="135" id="logopic" alt=""/></a>
 <body>
-<div id="parent"> <img class="banner" src="../Images/macOS-Big-Sur-Daylight-Wallpaper-iDownloadBlog (1).jpeg"  alt=""/> <img id="topimage" src="../Images/intel2.png"  alt=""/> </div>
-<div id="article">
-  <h3 align="">Intel NUC DC3217BY Hackintosh with Catalina [Guide]</h3>
-  <h5>Coming Soon</h5>
-  <p>While you wait, check out the original guide featured on <a href="https://www.tonymacx86.com/threads/success-syngatesfan200s-intel-nuc-dc3217by-thunderbolt-edition-non-thunderbolt-edition.86370/">tonymacx86.com</a></p>
-</div>
-<div id="footer">
+	<div id="container">
+		
+	<img src="../Images/Creative Resume copy.jpg" id="topimage">
+		<div id="para">
+		</div>
+		<div id="tech" align="center">
+		<h3>Technologies employed:</h3>
+			<img src="../Images/788px-Adobe_Photoshop_CC_icon.png" width="60" height="60" >
+		</div>
+	</div>
+	<div id="footer">
   <div id="social" align="center"> 
 	  <a href="https://www.youtube.com/user/SynGatesFan200/featured"><img src="../Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> </a>
 	  <a href="https://www.linkedin.com/in/ryan-coen/"><img src="../Images/linkedin.png" class="socialfooter" width="60" height="60" alt=""/> </a>
