--- a/HTML/macOS_calculator.html
+++ b/HTML/macOS_calculator.html
@@ -13,16 +13,16 @@
     <li class="dropdown" id="main1"><a href="../HTML/directory.html" class="trigger-drop">Projects</a>
       <ul class="drop">
         <li><a href="https://github.com/ryancoen">Github</a></li>
-        <li><a href="./HTML/directory.html">All</a></li>
+        <li><a href="../HTML/directory.html">All</a></li>
       </ul>
     </li>
-    <li id="main2"><a href="./HTML/music.html">Music</a></li>
-    <li id="main3"><a href="./HTML/about.html">About</a></li>
-	  <li class="dropdown" id="main4"><a href="./HTML/directory.html" class="trigger-drop">Menu</a>
+    <li id="main2"><a href="../HTML/music.html">Music</a></li>
+    <li id="main3"><a href="../HTML/about.html">About</a></li>
+	  <li class="dropdown" id="main4"><a href="../HTML/directory.html" class="trigger-drop">Menu</a>
       <ul class="drop">
         <li><a href="#">Github</a></li>
-		  <li><a href="./HTML/music.html">Music</a></li>
-		  <li><a href="./HTML/about.html">About</a></li>
+		  <li><a href="../HTML/music.html">Music</a></li>
+		  <li><a href="../HTML/about.html">About</a></li>
         <li><a href="../HTML/directory.html">Projects</a></li>
       </ul>
     </li>
@@ -74,10 +74,10 @@
 	</div>
 <div id="footer">
   <div id="social" align="center"> 
-	  <a href="https://www.youtube.com/user/SynGatesFan200/playlists"><img src="../Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> </a>
+	  <a href="https://www.youtube.com/user/SynGatesFan200/featured"><img src="../Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> </a>
 	  <a href="https://www.linkedin.com/in/ryan-coen/"><img src="../Images/linkedin.png" class="socialfooter" width="60" height="60" alt=""/> </a>
 	  <a href="https://github.com/ryancoen"><img src="../Images/github.png" class="socialfooter" width="60" height="60" alt=""/> </a> </div>
-  <h4 align="center">Ryan Coen - 2020</h4>
+  <h4 align="center">Ryan Coen - 2021</h4>
 </div>
 </body>
 </html>
