--- a/HTML/music.html
+++ b/HTML/music.html
@@ -10,14 +10,21 @@
 </head>
 <nav id="navigation"><a href="../index.html" class="logo">RYANCOEN.DEV</a>
   <ul class="links">
-    <li class="dropdown"><a href="../HTML/directory.html" class="trigger-drop">Projects</a>
+    <li class="dropdown" id="main1"><a href="../HTML/directory.html" class="trigger-drop">Projects</a>
       <ul class="drop">
-        <li><a href="#">Github</a></li>
+        <li><a href="https://github.com/ryancoen">Github</a></li>
         <li><a href="../HTML/directory.html">All</a></li>
       </ul>
     </li>
-    <li class="dropdown"><a href="../HTML/music.html" class="trigger-drop">Music</a>
-    <li><a href="../HTML/about.html">About</a></li>
+    <li id="main2"><a href="../HTML/music.html">Music</a></li>
+    <li id="main3"><a href="../HTML/about.html">About</a></li>
+	  <li class="dropdown" id="main4"><a href="../HTML/directory.html" class="trigger-drop">Menu</a>
+      <ul class="drop">
+        <li><a href="#">Github</a></li>
+		  <li><a href="../HTML/music.html">Music</a></li>
+		  <li><a href="../HTML/about.html">About</a></li>
+        <li><a href="../HTML/directory.html">Projects</a></li>
+      </ul>
     </li>
   </ul>
 </nav>
@@ -26,10 +33,10 @@
 <h1 align="center">Coming Soon</h1>
 <div id="footer">
   <div id="social" align="center"> 
-	  <a href="https://www.youtube.com/user/SynGatesFan200/playlists"><img src="../Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> </a>
+	  <a href="https://www.youtube.com/user/SynGatesFan200/featured"><img src="../Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> </a>
 	  <a href="https://www.linkedin.com/in/ryan-coen/"><img src="../Images/linkedin.png" class="socialfooter" width="60" height="60" alt=""/> </a>
 	  <a href="https://github.com/ryancoen"><img src="../Images/github.png" class="socialfooter" width="60" height="60" alt=""/> </a> </div>
-  <h4 align="center">Ryan Coen - 2020</h4>
+  <h4 align="center">Ryan Coen - 2021</h4>
 </div>
 </body>
 </html>
