Added Wantable Concept, fixed links, removed some articles for updating

--- a/HTML/directory.html
+++ b/HTML/directory.html
@@ -33,16 +33,18 @@
   <h1 align="center">Recent Posts</h1>
 	<h3>2021</h3>
   <ul class="projects">
+	  <li><a class="link2" href="../HTML/Wantable Redesign.html">[Concept] Wantable App Redesign </a></li>
 	  <li><a class="link2" href="../HTML/StylizedResume.html">[Resume] Stylized Resume </a></li>
+	  
   </ul>
   <h3>2020</h3>
   <ul class="projects">
 	  <li><a class="link2" href="../HTML/macOS_calculator.html">[Code] JavaScript Calculator - macOS </a></li>
     <li><a class="link2" href="../HTML/raspberrytimemachine.html">[Guide] Raspberry Pi Time Machine </a></li>
     <li><a class="link2" href="../HTML/All-In-One-Mac-Recovery.html">[Guide] All-in-one macOS/OS X Recovery Drive </a></li>
-    <li><a class="link2" href="">[Guide] Mac Pro 2008 A1222 El Capitan Upgrade </a></li>
+    <li><a class="link2" href="../HTML/macPro2008.html">[Guide] Mac Pro 2008 A1222 El Capitan Upgrade </a></li>
     <li><a class="link2" href="../HTML/Intel.html">[Guide] Intel NUC DC3217BY Hackintosh with Catalina</a></li>
-    <li><a class="link2" href=""></a>[Blog] Wii U Homebrew</li>
+    <li><a class="link2" href="../HTML/wiiu-homebrew.html"></a>[Blog] Wii U Homebrew</li>
   </ul>
   <h3>2019</h3>
   <ul class="projects">
