--- a/HTML/macPro2008.html
+++ b/HTML/macPro2008.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Stylized Resume 2021 | ryancoen.dev</title>
-<link rel="stylesheet" type="text/css" href="../CSS/imagedisplay.css">
+<title>All-in-One macOS Recovery | ryancoen.dev</title>
+<link rel="stylesheet" type="text/css" href="../CSS/All-In-One-Mac-Recovery.css">
 <link rel="stylesheet" type="text/css" href="../CSS/unv.css">
 <link rel="stylesheet" href="https://use.typekit.net/ynh7syw.css">
 </head>
@@ -29,17 +29,10 @@
 </nav>
 <a href="../index.html"><img src="../Images/logo.png"  width="135" height="135" id="logopic" alt=""/></a>
 <body>
-	<div id="container">
-		
-	<img src="../Images/Creative Resume copy.jpg" id="topimage">
-		<div id="para">
-		</div>
-		<div id="tech" align="center">
-		<h3>Technologies employed:</h3>
-			<img src="../Images/788px-Adobe_Photoshop_CC_icon.png" width="60" height="60" >
-		</div>
-	</div>
-	<div id="footer">
+<div id="article">
+  <h1 align="center">This page is currently under construction.</h1>
+</div>
+<div id="footer">
   <div id="social" align="center"> 
 	  <a href="https://www.youtube.com/user/SynGatesFan200/featured"><img src="../Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> </a>
 	  <a href="https://www.linkedin.com/in/ryan-coen/"><img src="../Images/linkedin.png" class="socialfooter" width="60" height="60" alt=""/> </a>
