--- a/HTML/wiiu-homebrew.html
+++ b/HTML/wiiu-homebrew.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Stylized Resume 2021 | ryancoen.dev</title>
+<title>Paper Mario: The Thousand-Year Door for Nintendo Switch | ryancoen.dev</title>
 <link rel="stylesheet" type="text/css" href="../CSS/imagedisplay.css">
 <link rel="stylesheet" type="text/css" href="../CSS/unv.css">
 <link rel="stylesheet" href="https://use.typekit.net/ynh7syw.css">
@@ -30,14 +30,7 @@
 <a href="../index.html"><img src="../Images/logo.png"  width="135" height="135" id="logopic" alt=""/></a>
 <body>
 	<div id="container">
-		
-	<img src="../Images/Creative Resume copy.jpg" id="topimage">
-		<div id="para">
-		</div>
-		<div id="tech" align="center">
-		<h3>Technologies employed:</h3>
-			<img src="../Images/788px-Adobe_Photoshop_CC_icon.png" width="60" height="60" >
-		</div>
+	<h1 align="center">This page is currently under construction.</h1>
 	</div>
 	<div id="footer">
   <div id="social" align="center"> 
