Updated SVG data

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" type="text/css" href="../CSS/about.css">
 <link rel="stylesheet" type="text/css" href="../CSS/unv.css">
 <link rel="stylesheet" href="https://use.typekit.net/ynh7syw.css">
+	<link rel="mask-icon" href="../Images/logo.svg" color="#000000">
 </head>
 <nav id="navigation"><a href="../index.html" class="logo">RYANCOEN.DEV</a>
   <ul class="links">
