--- a/HTML/macOS_calculator.html
+++ b/HTML/macOS_calculator.html
@@ -5,6 +5,7 @@
 <title>macOS Calculator | ryancoen.dev</title>
 <link rel="stylesheet" type="text/css" href="../CSS/calc.css">
 <link rel="stylesheet" type="text/css" href="../CSS/unv.css">
+	<link rel="mask-icon" href="../Images/logo.svg" color="#000000">
 <link rel="stylesheet" href="https://use.typekit.net/ynh7syw.css">
 <script type="text/javascript" src="../Javascript/calc.js" defer></script>
 </head>
