--- a/HTML/music.html
+++ b/HTML/music.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" type="text/css" href="../CSS/music.css">
 <link rel="stylesheet" type="text/css" href="../CSS/unv.css">
 <link rel="stylesheet" href="https://use.typekit.net/ynh7syw.css">
+	<link rel="mask-icon" href="../Images/logo.svg" color="#000000">
 <script type="text/javascript" src="../Javascript/music.js" defer></script>
 </head>
 <nav id="navigation"><a href="../index.html" class="logo">RYANCOEN.DEV</a>
