Added more redesign concepts

--- a/HTML/Intel.html
+++ b/HTML/Intel.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled Document</title>
+<title>Intel NUC DC3217BY Hackintosh | ryancoen.dev</title>
 <link rel="stylesheet" type="text/css" href="../CSS/intel.css">
 <link rel="stylesheet" type="text/css" href="../CSS/unv.css">
 <link rel="stylesheet" href="https://use.typekit.net/ynh7syw.css">
