--- a/HTML/Wantable Redesign.html
+++ b/HTML/Wantable Redesign.html
@@ -32,7 +32,8 @@
 <body>
 <div id="container"> <img id="wantable" src="../Images/wantableLogo.png">
   <h1 align="center">Wantable App Redesign</h1>
-  <p id="para">Wantable is a clothing subscription company based out of Milwaukee, Wisconsin. Their software stack primarily consists of Ruby on Rails, which doesn’t translate well in an app-based environment. The goal of this concept is to redesign the current app natively in Swift, make it more user friendly, and inject observable and fundamental changes to the overall user flow.<br><br>Some improvements include a dedicate profile section, a proper dock menu, and refined design guidelines (Such as button emphasis). </p>
+  <p id="para">Wantable is a clothing subscription company based out of Milwaukee, Wisconsin. Their software stack primarily consists of Ruby on Rails, which doesn’t translate well in an app-based environment. The goal of this concept is to redesign the current app natively in Swift, make it more user friendly, and inject observable and fundamental changes to the overall user flow.<br><br>
+   Some improvements include a dedicated profile section, a proper dock menu, and refined design guidelines (Such as button emphasis).</p>
   <div class="container2">
     <div class="imageContainer" align="center"><img class="iphoneImage" src="../Images/wantable1.png"></div>
     <div class="paraContainer">
@@ -64,14 +65,54 @@
   <div class="container2">
     <div class="paraContainer" id="hiddenpara2">
       <h2>Dedicated User Preference Section</h2>
-      <p class="para3">Now, instead of the slideout menu, the user has a proper way of accessing their data or changing settings.</p>
+      <p class="para3">Now, instead of the slideout menu, the user has a proper way of accessing their data or changing settings. Take note of the messages notification, something the current app lacks.</p>
     </div>
     <div class="imageContainer" align="center"><img class="iphoneImage" src="../Images/wantable4.png"></div>
 	  <div class="paraContainer" id="hiddenpara4">
       <h2>Dedicated User Preference Section</h2>
-      <p class="para3">Now, instead of the slideout menu, the user has a proper way of accessing their data or changing settings.</p>
+      <p class="para3">Now, instead of the slideout menu, the user has a proper way of accessing their data or changing settings. Take note of the messages notification, something the current app lacks.</p>
     </div>
   </div>
+	<div class="container2">
+    <div class="imageContainer" align="center"><img class="iphoneImage" src="../Images/wantable5.png"></div>
+    <div class="paraContainer">
+      <h2>Revamped Wishlist</h2>
+      <p class="para2">Cleaned up, more visually informative, and allows users two different display options. Also shows the companies ever-updating stock count for transparency.
+</p>
+    </div>
+  </div>
+  <div class="container2">
+    <div class="paraContainer" id="hiddenpara5">
+      <h2>Edit Quizzes: With a Fresh Coat of Paint</h2>
+      <p class="para3">Wantable's quizzes allow them to gather data about your sizes and preferences. This is page 1 after you select what kind of Edit you want to order. The current variable selection is really not great, so this version aims to make the experience of giving your persoanl details away much more enjoyable.
+</p>
+    </div>
+    <div class="imageContainer" align="center"><img class="iphoneImage" src="../Images/wantable6.png"></div>
+    <div class="paraContainer" id="hiddenpara7">
+      <h2>Edit Quizzes: With a Fresh Coat of Paint</h2>
+      <p class="para3">Wantable's quizzes allow them to gather data about your sizes and preferences. This is page 1 after you select what kind of Edit you want to order. The current variable selection is really not great, so this version aims to make the experience of giving your persoanl details away much more enjoyable.
+</p>
+    </div>
+  </div>
+  <div class="container2">
+    <div class="imageContainer" align="center"><img class="iphoneImage" src="../Images/wantable7.png"></div>
+    <div class="paraContainer">
+      <h2>Edit Tracking/Updating</h2>
+      <p class="para2">On the current app, tracking the status of your edits is visually confusing. This method not only color codes the status of each stage in the process, but also gives clear direction the user can take on each order. From here, the user can make on the fly decisions to edit their quizzes, cancel an order, or view reciepts. Nitification badges are also used here to show urgency for items that require attention. </p>
+    </div>
+  </div>
+  <div class="container2">
+    <div class="paraContainer" id="hiddenpara6">
+      <h2>True Messaging and Notification Services</h2>
+      <p class="para3">I wanted to make it simple for users to not only get in contact with their stylists, but also get updates on current orders. I created a threaded view, similar to iMessage, making it easier to reference previous conversations. Take note of the message notifications referenced earlier. These would be PUSHED to the users device, something the current app also lacks.</p>
+    </div>
+    <div class="imageContainer" align="center"><img class="iphoneImage" src="../Images/wantable8.png"></div>
+    <div class="paraContainer" id="hiddenpara8">
+      <h2>True Messaging and Notification Services</h2>
+      <p class="para3">I wanted to make it simple for users to not only get in contact with their stylists, but also get updates on current orders. I created a threaded view, similar to iMessage, making it easier to reference previous conversations. Take note of the message notifications referenced earlier. These would be PUSHED to the users device, something the current app also lacks.</p>
+    </div>
+  </div>
+  <img id="colab" src="../Images/WRC.png">
 </div>
 <div id="footer">
   <div id="social" align="center"> <a href="https://www.youtube.com/user/SynGatesFan200/featured"><img src="../Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> </a> <a href="https://www.linkedin.com/in/ryan-coen/"><img src="../Images/linkedin.png" class="socialfooter" width="60" height="60" alt=""/> </a> <a href="https://github.com/ryancoen"><img src="../Images/github.png" class="socialfooter" width="60" height="60" alt=""/> </a> </div>
