--- a/HTML/Wantable Redesign.html
+++ b/HTML/Wantable Redesign.html
@@ -84,13 +84,13 @@
   <div class="container2">
     <div class="paraContainer" id="hiddenpara5">
       <h2>Edit Quizzes: With a Fresh Coat of Paint</h2>
-      <p class="para3">Wantable's quizzes allow them to gather data about your sizes and preferences. This is page 1 after you select what kind of Edit you want to order. The current variable selection is really not great, so this version aims to make the experience of giving your persoanl details away much more enjoyable.
-</p>
+      <p class="para3">Wantable's quizzes allow them to gather data about your sizes and preferences. This is page one after you select what kind of Edit you want to order. The current variable selection is really not great, so this version aims to make the experience more enjoyable.
+      </p>
     </div>
     <div class="imageContainer" align="center"><img class="iphoneImage" src="../Images/wantable6.png"></div>
     <div class="paraContainer" id="hiddenpara7">
       <h2>Edit Quizzes: With a Fresh Coat of Paint</h2>
-      <p class="para3">Wantable's quizzes allow them to gather data about your sizes and preferences. This is page 1 after you select what kind of Edit you want to order. The current variable selection is really not great, so this version aims to make the experience of giving your persoanl details away much more enjoyable.
+      <p class="para3">Wantable's quizzes allow them to gather data about your sizes and preferences. This is page 1 after you select what kind of Edit you want to order. The current variable selection is really not great, so this version aims to make the experience more enjoyable.
 </p>
     </div>
   </div>
@@ -98,7 +98,7 @@
     <div class="imageContainer" align="center"><img class="iphoneImage" src="../Images/wantable7.png"></div>
     <div class="paraContainer">
       <h2>Edit Tracking/Updating</h2>
-      <p class="para2">On the current app, tracking the status of your edits is visually confusing. This method not only color codes the status of each stage in the process, but also gives clear direction the user can take on each order. From here, the user can make on the fly decisions to edit their quizzes, cancel an order, or view reciepts. Nitification badges are also used here to show urgency for items that require attention. </p>
+      <p class="para2">On the current app, tracking the status of your edits is visually confusing. This method not only color codes the status of each stage in the process, but also gives clear direction the user can take on each order. From here, the user can make on the fly decisions to edit their quizzes, cancel an order, or view reciepts. Notification badges are also used here to show urgency for items that require attention. </p>
     </div>
   </div>
   <div class="container2">
