--- a/HTML/Wantable Redesign.html
+++ b/HTML/Wantable Redesign.html
@@ -38,8 +38,8 @@
     <div class="imageContainer" align="center"><img class="iphoneImage" src="../Images/wantable1.png"></div>
     <div class="paraContainer">
       <h2>Home Screen Redesign</h2>
-      <p class="para2">A main component of Wantable’s user interface is The Stream. The Stream is a curation of algorithmically selected clothes that the user may be interested in based on their initial Style Quiz they took when they signed up for the service. The current app, regardless if you are signed up for the service, brings you directly to the Stream. <br><br>The new welcome screen is not only more personable, but also allows the user to select where they want to go from the start instead of being thrust into the marketplace. If the user is not signed in, “Your Profile” and “Your Edits” would be replaced with sign in options. Either way, the user has the option to swipe up to go right into The Stream if they choose.
-</p>
+      <p class="para2">A main component of Wantable’s user interface is The Stream. The Stream is a curation of algorithmically selected clothes that the user may be interested in based on their initial Style Quiz they took when they signed up for the service. The current app, regardless if you are signed up for the service, brings you directly to the Stream. <br><br>
+The new welcome screen is not only more personable, but also allows the user to select where they want to go from the start instead of being thrust into the marketplace. If the user is not signed in, “Your Profile” and “Your Edits” would be replaced with sign in options, such as Sign-in with Apple. Either way, the user has the option to swipe up to go right into The Stream if they choose.</p>
     </div>
   </div>
   <div class="container2">
@@ -59,7 +59,7 @@
     <div class="imageContainer" align="center"><img class="iphoneImage" src="../Images/wantable3.png"></div>
     <div class="paraContainer">
       <h2>Focused Edits</h2>
-      <p class="para2">Edits are Wantables handcrafted boxes filled with the clothes you love. I wanted to make it easy for users to sign up for them or edit an existing one. </p>
+      <p class="para2">Edits are Wantables handcrafted boxes filled with the clothes you love. I wanted to make it easy for users to sign up for them or edit an existing one. This screen shows the process if they wanted to sign up for a Standard Edit. Themed Edits would be present in different ways as they are limited time and promotional. </p>
     </div>
   </div>
   <div class="container2">
@@ -110,6 +110,13 @@
     <div class="paraContainer" id="hiddenpara8">
       <h2>True Messaging and Notification Services</h2>
       <p class="para3">I wanted to make it simple for users to not only get in contact with their stylists, but also get updates on current orders. I created a threaded view, similar to iMessage, making it easier to reference previous conversations. Take note of the message notifications referenced earlier. These would be PUSHED to the users device, something the current app also lacks.</p>
+    </div>
+  </div>
+	<div class="container2">
+    <div class="imageContainer" align="center"><img class="iphoneImage" src="../Images/wantable9.png"></div>
+    <div class="paraContainer">
+      <h2>Promotion for Themed Edits</h2>
+      <p class="para2">Themed Edits are Wantables limited-time Edits focused on a particular style with a set curation of clothing. Right now, promotion on their website for these is limited to a simple banner. For something so limited, it needs to have a dedicated page. This page could be accessed from either the Edits tab, or it would be presented to the user once per month, either as a push notification or right before they access their Stream. </p>
     </div>
   </div>
   <img id="colab" src="../Images/WRC.png">
