--- a/HTML/about.html
+++ b/HTML/about.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="../CSS/about.css">
 <link rel="stylesheet" type="text/css" href="../CSS/unv.css">
 <link rel="stylesheet" href="https://use.typekit.net/ynh7syw.css">
-	<link rel="mask-icon" href="../Images/logo.svg" color="#000000">
+<link rel="mask-icon" href="../Images/logo.svg" color="#000000">
 </head>
 <nav id="navigation"><a href="../index.html" class="logo">RYANCOEN.DEV</a>
   <ul class="links">
@@ -18,11 +18,11 @@
     </li>
     <li id="main2"><a href="../HTML/music.html">Music</a></li>
     <li id="main3"><a href="../HTML/about.html">About</a></li>
-	  <li class="dropdown" id="main4"><a href="../HTML/directory.html" class="trigger-drop">Menu</a>
-      <ul class="drop">
+    <li id="main4"><a href="../HTML/directory.html" >Menu</a>
+      <ul>
         <li><a href="#">Github</a></li>
-		  <li><a href="../HTML/music.html">Music</a></li>
-		  <li><a href="../HTML/about.html">About</a></li>
+        <li><a href="../HTML/music.html">Music</a></li>
+        <li><a href="../HTML/about.html">About</a></li>
         <li><a href="../HTML/directory.html">Projects</a></li>
       </ul>
     </li>
@@ -35,15 +35,13 @@
     <div id="para">
       <h1>Ryan Coen</h1>
       <h4>Creative IT Leader | Musician | Apple Enthusiast</h4>
-      <p>Hey there! My name is Ryan Coen, an IT Leader based out of Milwaukee, WI. Technology, music, and design are my passions. Learning new things and implementing them in my creative projects is what I love to do. I have years of expereince in client facing leadership and technical support and I'm not afraid to get my hands dirty to solve complex problems.<br><br>
+      <p>Hey there! My name is Ryan Coen, an IT Leader based out of Milwaukee, WI. Technology, music, and design are my passions. Learning new things and implementing them in my creative projects is what I love to do. I have years of expereince in client facing leadership and technical support and I'm not afraid to get my hands dirty to solve complex problems.<br>
+        <br>
         Take a look at my portfolio, maybe learn a thing or two, or just say "Hi!". Mac and I would love to hear from you. </p>
     </div>
   </div>
-	<div id="buttonbox">
-  <a href="https://www.icloud.com/iclouddrive/0rUN1_7jEtkfRyJj_Wk5xOWpQ#RyanCoenResume" class="button" id="resumebutton">Download Resume</a>
-	<a href="https://www.linkedin.com/in/ryan-coen/" class="button" id="linkedinbutton">Connect on <b>LinkedIn</b></a>
-	</div>
-	<br>
+  <div id="buttonbox"> <a href="https://www.icloud.com/iclouddrive/0rUN1_7jEtkfRyJj_Wk5xOWpQ#RyanCoenResume" class="button" id="resumebutton">Download Resume</a> <a href="https://www.linkedin.com/in/ryan-coen/" class="button" id="linkedinbutton">Connect on <b>LinkedIn</b></a> </div>
+  <br>
 </div>
 <div id="container2">
   <div id="barz">
@@ -76,10 +74,7 @@
   </div>
 </div>
 <div id="footer">
-  <div id="social" align="center"> 
-	  <a href="https://www.youtube.com/user/SynGatesFan200/featured"><img src="../Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> </a>
-	  <a href="https://www.linkedin.com/in/ryan-coen/"><img src="../Images/linkedin.png" class="socialfooter" width="60" height="60" alt=""/> </a>
-	  <a href="https://github.com/ryancoen"><img src="../Images/github.png" class="socialfooter" width="60" height="60" alt=""/> </a> </div>
+  <div id="social" align="center"> <a href="https://www.youtube.com/user/SynGatesFan200/featured"><img src="../Images/youtube.png" class="socialfooter" width="60" height="60" alt=""/> </a> <a href="https://www.linkedin.com/in/ryan-coen/"><img src="../Images/linkedin.png" class="socialfooter" width="60" height="60" alt=""/> </a> <a href="https://github.com/ryancoen"><img src="../Images/github.png" class="socialfooter" width="60" height="60" alt=""/> </a> </div>
   <h4 align="center">Ryan Coen - 2021</h4>
 </div>
 </body>
