Attempt at Google Analytics

--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <html>
 <head>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-YC4LMTH42Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YC4LMTH42Q');
+</script>
 <meta charset="UTF-8">
 <title>Home | ryancoen.dev</title>
 <link rel="stylesheet" type="text/css" href="./CSS/index.css">
